--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nick Saxton",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.19"
   }
 }
